@@ -76,6 +76,27 @@
       <artifactId>log4j-api</artifactId>
       <version>2.20.0</version>
     </dependency>
-  </dependencies>
 
+	  <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.32</version> <!-- latest -->
+    <scope>provided</scope>
+</dependency>
+  </dependencies>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.13.0</version>
+    <configuration>
+        <source>17</source>
+        <target>17</target>
+        <compilerArgs>
+            <arg>--add-opens</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>--add-opens</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+        </compilerArgs>
+    </configuration>
+</plugin>
 </project>
